--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 a {
-    color: #e38cb7;
+    color: #e38c98;
 }
 
 a:hover,
@@ -55,13 +55,13 @@ h1 {
 h2 {
     font-size: 45px;
     font-weight: 300;
-    color: #633991;
+    color: #913941;
     letter-spacing: -1px;
     margin-bottom: 1rem;
 }
 
 h3 {
-    color: #633991;
+    color: #913941;
     font-size: 33px;
     font-weight: 500;
 }
@@ -69,13 +69,13 @@ h3 {
 h4 {
     font-size: 20px;
     font-weight: 500;
-    color: #633991;
+    color: #913941;
 }
 
 h5 {
     font-size: 28px;
     font-weight: 300;
-    color: #633991;
+    color: #913941;
     margin-bottom: 0.7rem;
 }
 
@@ -84,12 +84,12 @@ p {
 }
 
 p.lead {
-    color: #e38cb7;
+    color: #e38c98;
     margin-bottom: 2rem;
 }
 
 .text-primary {
-    color: #e38cb7 !important;
+    color: #e38c98 !important;
 }
 
 .light-font {
@@ -110,10 +110,10 @@ p.lead {
 
 .btn-primary {
     border-radius: 3px;
-    background-image: -moz-linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    background-image: -webkit-linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    background-image: -ms-linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
-    background-image: linear-gradient( 122deg, #e54595 0%, #fd378e 100%);
+    background-image: -moz-linear-gradient( 122deg, #e54545 0%, #fd3737 100%);
+    background-image: -webkit-linear-gradient( 122deg, #e54545 0%, #fd3737 100%);
+    background-image: -ms-linear-gradient( 122deg, #e54545 0%, #fd3737 100%);
+    background-image: linear-gradient( 122deg, #e54545 0%, #fd3737 100%);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2);
     font-weight: 500;
     padding: 0.6rem 2rem;
@@ -126,7 +126,7 @@ p.lead {
 .btn-primary:not([disabled]):not(.disabled).active,
 .btn-primary:not([disabled]):not(.disabled):active,
 .show>.btn-primary.dropdown-toggle {
-    background-image: linear-gradient( 122deg, #fd378e 0%, #e54595 100%);
+    background-image: linear-gradient( 122deg, #fd3737 0%, #e54545 100%);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.3);
     color: #FFF;
 }
@@ -137,7 +137,7 @@ p.lead {
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.26);
     font-size: 14px;
     font-weight: 500;
-    color: #633991;
+    color: #913941;
     margin: 0.5rem;
     padding: 0.7rem 1.6rem;
     line-height: 1.8;
@@ -186,10 +186,10 @@ p.lead {
 
 .nav-menu.is-scrolling,
 .nav-menu.menu-is-open {
-    background-color: rgb(74, 13, 143);
-    background: -moz-linear-gradient(135deg, rgb(74, 13, 143) 0%, rgb(250, 42, 143) 100%);
-    background: -webkit-linear-gradient(135deg, rgb(74, 13, 143) 0%, rgb(250, 42, 143) 100%);
-    background: linear-gradient(135deg, rgb(74, 13, 143) 0%, rgb(250, 42, 143) 100%);
+    background-color: rgb(0, 0, 0);
+    background: -moz-linear-gradient(135deg, rgb(0, 0, 0) 0%, rgb(253, 47, 57) 100%);
+    background: -webkit-linear-gradient(135deg, rgb(0, 0, 0) 0%, rgb(253, 47, 57) 100%);
+    background: linear-gradient(135deg, rgb(0, 0, 0) 0%, rgb(253, 47, 57) 100%);
     -webkit-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
@@ -240,16 +240,16 @@ header {
 }
 
 .bg-gradient {
-    background-image: -moz-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
-    background-image: -webkit-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
-    background-image: -ms-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
-    background-image: linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+    background-image: -moz-linear-gradient( 135deg, rgba(0, 0, 0, 0.8) 0%, rgba(253, 57, 47, 0.8) 100%);
+    background-image: -webkit-linear-gradient( 135deg, rgba(0, 0, 0, 0.8) 0%, rgba(253, 57, 47, 0.8) 100%);
+    background-image: -ms-linear-gradient( 135deg, rgba(0, 0, 0, 0.8) 0%, rgba(253, 57, 47, 0.8) 100%);
+    background-image: linear-gradient( 135deg, rgba(0, 0, 0, 0.8) 0%, rgba(253, 57, 47, 0.8) 100%);
 }
 
 .tagline {
     font-size: 23px;
     font-weight: 300;
-    color: #ffb8f6;
+    color: #ffb8b8;
     max-width: 800px;
     margin: 0 auto;
 }
@@ -280,10 +280,10 @@ header {
 ----------------------*/
 
 .gradient-fill:before {
-    color: #fc73b4;
-    background: -moz-linear-gradient(top, #9477b4 0%, #fc73b4 100%);
-    background: -webkit-linear-gradient(top, #9477b4 0%, #fc73b4 100%);
-    background: linear-gradient(to bottom, #9477b4 0%, #fc73b4 100%);
+    color: #fc7373;
+    background: -moz-linear-gradient(top, #b47777 0%, #fc7373 100%);
+    background: -webkit-linear-gradient(top, #b47777 0%, #fc7373 100%);
+    background: linear-gradient(to bottom, #b47777 0%, #fc7373 100%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -309,10 +309,10 @@ header {
     content: "";
     position: absolute;
     width: 3px;
-    color: #fc73b4;
-    background: -moz-linear-gradient(top, #9477b4 0%, #fc73b4 100%);
-    background: -webkit-linear-gradient(top, #9477b4 0%, #fc73b4 100%);
-    background: linear-gradient(to bottom, #9477b4 0%, #fc73b4 100%);
+    color: #fc7373;
+    background: -moz-linear-gradient(top, #b47777 0%, #fc7373 100%);
+    background: -webkit-linear-gradient(top, #b47777 0%, #fc7373 100%);
+    background: linear-gradient(to bottom, #b47777 0%, #fc7373 100%);
     top: 0;
     bottom: 0;
     left: 0;
@@ -427,15 +427,15 @@ header {
     padding: 1rem 1rem;
     border-color: #faf6fb #faf6fb #FFF;
     font-size: 19px;
-    color: #b5a4c8;
+    color: #d39d9d;
     background: #f5eff7;
 }
 
 .nav-tabs .nav-link.active {
     background: #FFF;
     border-top-width: 3px;
-    border-color: #ce75b4 #faf6fb #FFF;
-    color: #633991;
+    border-color: #eb6767 #faf6fb #FFF;
+    color: #913941;
 }
 
 
@@ -493,11 +493,11 @@ header {
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #ff487e;
+    background: #ff4848;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-    background: #ff487e;
+    background: #ff4848;
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.07);
 }
 
@@ -535,9 +535,9 @@ header {
 
 .card.pricing.popular {
     border-top-width: 3px;
-    border-color: #ce75b4 #faf6fb #FFF;
+    border-color: #eb6767 #faf6fb #FFF;
     box-shadow: 0px 12px 59px 0px rgba(36, 7, 31, 0.11);
-    color: #633991;
+    color: #913941;
 }
 
 .card.pricing .card-head {
@@ -549,7 +549,7 @@ header {
     display: block;
     font-size: 45px;
     font-weight: 300;
-    color: #633991;
+    color: #913941;
 }
 
 .card.pricing .card-head .price sub {
@@ -597,7 +597,7 @@ header {
 .call-to-action .tagline {
     font-size: 16px;
     font-weight: 300;
-    color: #ffb8f6;
+    color: #ffb8c5;
     max-width: 650px;
     margin: 0 auto;
 }
@@ -631,7 +631,7 @@ header {
 
 .social-icons a:hover {
     text-decoration: none;
-    color: #e38cb7;
+    color: #e38c98;
 }
 
 @media (max-width:991px) {
