--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,18 @@ p.lead {
     line-height: 1.8;
 }
 
+.btn-comingsoon {
+    border-radius: 3px;
+    background: transparent;
+    box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.26);
+    font-size: 14px;
+    font-weight: 500;
+    color: linear-gradient( 122deg, #fd3737 0%, #e54545 100%);
+    margin: 0.5rem;
+    padding: 0.7rem 1.6rem;
+    line-height: 1.8;
+}
+
 .btn-group-lg>.btn,
 .btn-lg {
     padding: 0.8rem 1rem;
